--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
         <div class="hero-section">
           <h2 class="hero-title">
             <i class="fas fa-trophy" style="color: var(--primary-gold); margin-right: 0.5rem;"></i>
-            Total Disbursement Oct-25
+            Total Disbursement <br> Oct-25
           </h2>
           <div class="hero-number number-loading" id="heroNumber">0</div>
         </div>
